[tool.poetry]
name = "twitter-sentiment"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "twitter_sentiment"}]

[tool.poetry.dependencies]
python = "^3.9"
tweetnlp = "^0.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
